k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hrbrain
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80            # Port interne au cluster
      targetPort: 80      # Port du container nginx
      nodePort: 30080     # Port accessible depuis l'extérieur
