k8s/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: hrbrain
  labels:
    app: sonarqube
spec:
  type: NodePort
  selector:
    app: sonarqube
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      nodePort: 30900    # Accès via http://<node-ip>:30900
